# platform-lib

./: .library  CMakeLists.txt  README.md  cclm-library.yml  info.toml  info.yaml  package.yml  platform.h
include/: foo.h
source/: foo.cpp  platform.cpp
